@@ -43,7 +43,6 @@ mailfrom = sentry@zestsoftware.nl
 [sentry]
 recipe = zc.recipe.egg
 eggs = sentry
-extra-paths = ${buildout:directory}/central_sentry
 
 [env]
 recipe = gocept.recipe.env
@@ -67,9 +66,10 @@ supervisord-environment = PYTHONUNBUFFERED="true",SENTRY_CONF="${buildout:direct
 programs =
       10 redis  (stderr_logfile=NONE stdout_logfile=${buildout:directory}/var/log/redis-stdout.log) ${buildout:directory}/parts/redis/src/redis-server [${buildout:directory}/etc/redis.conf] true
       20 memcached (stderr_logfile=NONE stdout_logfile=${buildout:directory}/var/log/memcached-stdout.log) ${memcached:location}/bin/memcached [ -m ${conf:memcached-size} -l localhost -p ${conf:memcached} -U ${conf:memcached} ] true
-      50 sentryweb (stderr_logfile=NONE stdout_logfile=${buildout:directory}/var/log/sentryweb-stdout.log) ${buildout:directory}/bin/sentry [run web] true
-      50 sentryworker1 (stderr_logfile=NONE stdout_logfile=${buildout:directory}/var/log/sentryworker1-stdout.log) ${buildout:directory}/bin/sentry [run worker] true
-      50 sentrycron (stderr_logfile=NONE stdout_logfile=${buildout:directory}/var/log/sentrycron-stdout.log) ${buildout:directory}/bin/sentry [run cron] true
+      30 sentryweb (stderr_logfile=NONE stdout_logfile=${buildout:directory}/var/log/sentryweb-stdout.log) ${buildout:directory}/bin/sentry [run web] true
+      40 sentryworker1 (stderr_logfile=NONE stdout_logfile=${buildout:directory}/var/log/sentryworker1-stdout.log) ${buildout:directory}/bin/sentry [run worker] true
+      50 sentryworker2 (stderr_logfile=NONE stdout_logfile=${buildout:directory}/var/log/sentryworker2-stdout.log) ${buildout:directory}/bin/sentry [run worker] true
+      60 sentrycron (stderr_logfile=NONE stdout_logfile=${buildout:directory}/var/log/sentrycron-stdout.log) ${buildout:directory}/bin/sentry [run cron] true
 
 [redis]
 recipe = hexagonit.recipe.download
