@@ -1,11 +1,0 @@
-DATABASES = {
-    'default': {'ENGINE': 'django.db.backends.postgresql_psycopg2',
-                'NAME': 'sentry',
-                'USER': 'sentry',
-                'PASSWORD': 'secret',
-                'HOST': '127.0.0.1',
-                'PORT': ''}
-    }
-SENTRY_URL_PREFIX = 'http://127.0.0.1:9000'
-ALLOWED_HOSTS = '*'
-DEBUG = True
